# animation_quantum_mech_basics

./: .env.example  .gitignore  BACKEND_FRONTEND_FIXES.md  CLEANUP_SUMMARY.md  CODESPACE_PORT_FORWARDING_GUIDE.md  CODESPACE_SETUP.md  COMPLETE_GUIDE.md  COMPREHENSIVE_README.md  CONNECTION_COMPLETE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FIX_STATUS.txt  FRONTEND_BACKEND_CONNECTION.md  GET_STARTED.md  HOW_TO_RUN.md  IMPORT_FIX_SUMMARY.md  Interactive_Quantum_Controls.ipynb  LICENSE  OPTIMIZATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_FIX_REFERENCE.md  QUICK_REFERENCE.sh  QUICK_START.md  README.md  README_WEB.md  RENDERING_STATUS.txt  SETUP.md  SETUP_AND_DEPLOYMENT.md  SIMULATION_RESULTS.md  SOLVER_FIX_SUMMARY.md  START.md  START_HERE.md  START_HERE.txt  _config.yml  build_quantum_animations.sh  docker-compose.yml  (+10 more)
.cleanup_backup/: CODESPACE_GUIDE.md  CODESPACE_QUICKSTART.md  COMPLETION_REPORT.txt  COMPLETION_SUMMARY.md  DOCUMENTATION_INDEX.md  EXECUTION_CHECKLIST.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY_V2.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_V2.md  Quantum_Mechanics_Interactive_Simulator.ipynb  README_FINAL_STATUS.md  TEACHING_GUIDE.md  debug_solver.py  generate_plots.py  quick_test.py  run_demo.py
Quantum Mechanics Simulation Website/: README.md  index.html  package.json
api/: quantum_api.py  requirements.txt  websocket_support.py
app/: DEPLOYMENT.md  README.md  integration_test.py  quickstart.py  setup.sh  test_fixes.py
cpp/: quantum_wasm.cpp
docs/: script.js  (+2 more)
(+132 files in other folders)
