[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-animation"
version = "0.1.0"
description = "Introductory quantum mechanics animations built with Manim."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Animation Quantum Mechanics Team" }
]
dependencies = [
  "manim>=0.18",
  "numpy>=1.23",
  "scipy>=1.10",
  "sympy>=1.11",
  "qutip>=5.0",
  "qmsolve>=2.0"
]

[project.optional-dependencies]
visualization = [
  "matplotlib>=3.8",
  "vpython>=7.6"
]
quantum = [
  "qutip>=5.0",
  "qmsolve>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
