[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-playground"
version = "0.1.0"
description = "Interactive quantum mechanics simulations: infinite well, finite well, harmonic oscillator, and tunneling"
requires-python = ">=3.9"
authors = [{name = "Quantum Playground", email = "contact@example.com"}]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "ipywidgets>=7.6.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=21.0", "pylint>=2.9"]
performance = ["numba>=0.54.0"]
animation = ["manim>=0.15.0"]

[tool.setuptools.packages.find]
where = ["src"]
